rgw_op: pass delete bucket op to master zone first

Basically first ask the master to process a delete bucket request before
we process it in the zone locally, otherwise we reach a situation where
we drop the bucket locally and master will still maintain an index

Fixes: http://tracker.ceph.com/issues/15540
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>